[gd_scene load_steps=2 format=3 uid="uid://y7s1081jj0hp"]

[ext_resource type="Script" path="res://addons/inventory-system/editor/base/base_inventory_editor.gd" id="1_a003s"]

[node name="InventoryTabEditor" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_a003s")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = -128

[node name="NewResourceDialog" type="FileDialog" parent="."]
size = Vector2i(1024, 162)
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.tres ; InventoryItem")

[node name="OpenResourceDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(312, 157)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.tres ; InventoryItem")

[node name="RemoveConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(400, 100)

[node name="RemoveAndDeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(400, 100)

[connection signal="file_selected" from="NewResourceDialog" to="." method="_on_new_resource_dialog_file_selected"]
[connection signal="file_selected" from="OpenResourceDialog" to="." method="_on_open_resource_dialog_file_selected"]
[connection signal="confirmed" from="RemoveConfirmationDialog" to="." method="_on_remove_confirmation_dialog_confirmed"]
[connection signal="confirmed" from="RemoveAndDeleteConfirmationDialog" to="." method="_on_remove_and_delete_confirmation_dialog_confirmed"]
